# uefiscan

./: .gitignore  AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/01-basic/: SCENARIO.md  make_sample.py
demos/02-clean-pass/: SCENARIO.md  build.py
demos/03-missing-keys/: SCENARIO.md  build.py
demos/04-unsigned-driver/: SCENARIO.md  build.py
demos/05-te-module/: SCENARIO.md  build.py
demos/06-not-uefi/: SCENARIO.md  build.py
demos/07-no-dbx/: SCENARIO.md  build.py
demos/08-multi-volume/: SCENARIO.md  build.py
demos/09-ci-gate/: SCENARIO.md  build.py
demos/10-truncated/: SCENARIO.md  build.py
demos/11-kev-enrichment/: SCENARIO.md  run.py
demos/_lib/: fwbuild.py
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: feeds.txt  help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  index.test.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
ports/shell/: test.sh  uefiscan.sh
tests/: _fwfix.py  conftest.py  test_active.py  test_cli_extra.py  test_connect.py  test_core_extra.py  test_demos.py  test_feeds.py  test_passive.py  test_smoke.py  test_vulndb_local.py
tests/fixtures/feeds-cache/: cisa-kev.data  cisa-kev.meta.json
uefiscan/: __init__.py  __main__.py  active.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py  passive.py
